--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_dark_color"
-    tools:context=".ui.SplashActivity">
+    tools:context=".presentation.activity.SplashActivity">
 
     <TextView
         android:id="@+id/tvAppName"
