--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,10 +11,16 @@
     <color name="primary_color">#1976d2</color>
     <color name="primary_light_color">#63a4ff</color>
     <color name="primary_dark_color">#004ba0</color>
+
     <color name="secondary_color">#90caf9</color>
     <color name="secondary_light_color">#c3fdff</color>
     <color name="secondary_dark_color">#5d99c6</color>
-    <color name="primary_text_color">#ffffff</color>
-    <color name="secondary_text_color">#000000</color>
+
+<!--    <color name="primary_text_color">#ffffff</color>-->
+<!--    <color name="secondary_text_color">#000000</color>-->
+
+    <color name="dish_image_background">#E1E1E1</color>
+    <color name="blue_grey_700">#37474f</color>
+    <color name="grey_900">#212121</color>
 
 </resources>
